--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,13 @@
     <artifactId>ormdemo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <dependency>
-        <groupId>org.postgresql</groupId>
-        <artifactId>postgresql</artifactId>
-    </dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+    </dependencies>
+
 
 
 </project>
